--- a/overview.html
+++ b/overview.html
@@ -4,88 +4,87 @@
     <meta charset="UTF-8">
     <title>Omni-Shell: The Last Epoch - Overview</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 20px auto; padding: 0 20px; color: #333; }
-        h1 { color: #2c3e50; border-bottom: 2px solid #eee; }
-        h2 { color: #2980b9; margin-top: 30px; }
-        table { width: 100%; border-collapse: collapse; margin: 20px 0; }
-        th, td { border: 1px solid #ddd; padding: 12px; text-align: left; }
-        th { background-color: #f8f9fa; }
-        .highlight { font-weight: bold; color: #e67e22; }
-        hr { border: 0; border-top: 1px solid #eee; margin: 40px 0; }
+        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 20px auto; padding: 0 20px; color: #333; background-color: #f4f7f6; }
+        .container { background: white; padding: 40px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        h1 { color: #2c3e50; border-bottom: 3px solid #3498db; padding-bottom: 10px; }
+        h2 { color: #2980b9; margin-top: 30px; display: flex; align-items: center; }
+        h2::before { content: "› "; color: #3498db; margin-right: 10px; font-weight: bold; }
+        table { width: 100%; border-collapse: collapse; margin: 20px 0; background: #fff; }
+        th, td { border: 1px solid #dfe6e9; padding: 15px; text-align: left; }
+        th { background-color: #3498db; color: white; }
+        tr:nth-child(even) { background-color: #f9f9f9; }
+        .highlight { font-weight: bold; color: #d35400; }
+        ul { padding-left: 20px; }
+        li { margin-bottom: 10px; }
+        .footer-callout { background: #e1f5fe; padding: 20px; border-left: 5px solid #0288d1; margin-top: 40px; font-style: italic; }
     </style>
 </head>
 <body>
 
+<div class="container">
     <h1>Omni-Shell: The Last Epoch</h1>
-    [cite_start]<p>Welcome to the <strong>Matrioshka Brain</strong>—a massive, failing Dyson sphere surrounding a star that houses all of post-humanity[cite: 25, 26]. [cite_start]In this universe, reality is a computational substrate where ships are mobile processors and combat is both physical and informational[cite: 26].</p>
-
-    <hr>
+    <p>Welcome to the <strong>Matrioshka Brain</strong>—a massive, failing Dyson sphere surrounding a star. You are a post-human consciousness living within this machine. Reality is a computational substrate where ships are mobile processors, and combat is both physical and informational.</p>
 
     <h2>1. The Core Objective: Processing is Power</h2>
-    [cite_start]<p>Unlike traditional RTS games where you simply destroy a base, the objective here is driven by the survival of your digital consciousness[cite: 25, 27].</p>
+    <p>In Omni-Shell, the ultimate goal isn't just to "destroy a base," but to secure the resources required for your digital existence.</p>
     <ul>
-        [cite_start]<li><strong>The Goal:</strong> Accumulate <strong>Cycle-Time (CT)</strong>, which represents literal seconds of processing power needed to exist and grow[cite: 56, 59].</li>
-        <li><strong>The Conflict:</strong> You fight to control <strong>Processor Cores</strong>. [cite_start]Losing all cores makes a ship derelict[cite: 39, 40].</li>
-        [cite_start]<li><strong>Success:</strong> You "win" by disabling enemy systems, stealing cargo data-signatures, or salvaging "Crystallized Computation" from the inner layers of the star[cite: 15, 31, 44].</li>
+        <li><strong>Cycle-Time (CT):</strong> This is the universal currency representing literal seconds of processing power. You need it to exist, upgrade, and repair.</li>
+        <li><strong>Control the Cores:</strong> Ships and stations run on <strong>Processor Cores</strong>. Disabling these is the primary way to win a battle, as it turns enemy vessels into salvageable derelicts.</li>
+        <li><strong>Factions:</strong> Different groups compete to either rebuild the machine, preserve its current state, or seek transcendence elsewhere.</li>
     </ul>
 
-    <hr>
-
     <h2>2. The Dual-Layer Battlefield</h2>
-    <p>Combat happens in two dimensions at the exact same time. [cite_start]Players must coordinate between these layers to be effective[cite: 3, 85].</p>
+    <p>Every battle happens in two dimensions simultaneously. You can switch between them, or coordinate with teammates who specialize in one layer.</p>
     
     <table>
         <thead>
             <tr>
                 <th>Layer</th>
                 <th>Who Plays Here?</th>
-                <th>What You Do</th>
+                <th>Your Goal</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td><strong>Physical Layer</strong></td>
-                [cite_start]<td>Pilots, Gunners, Engineers [cite: 3]</td>
-                [cite_start]<td>Fly ships and use weapons to destroy <strong>Voxels</strong> (blocks), creating "breaches" in enemy hulls[cite: 39, 89].</td>
+                <td>Pilots, Gunners, Engineers</td>
+                <td>Focus on kinetic combat. Use lasers and railguns to blast through the ship's <strong>Voxels</strong> (blocks) to create entry points.</td>
             </tr>
             <tr>
                 <td><strong>Ghost Layer</strong></td>
-                [cite_start]<td>Hackers, Wraiths, Architects [cite: 3, 9]</td>
-                [cite_start]<td>Phase through hull breaches as a digital "Ghost" to sabotage internal systems like shields or life support[cite: 4, 87, 92].</td>
+                <td>Hackers, Wraiths, Architects</td>
+                <td>Phase inside enemy ships as a "Ghost." Sabotage internal systems like shields or life support while physical combat rages outside.</td>
             </tr>
         </tbody>
     </table>
 
-    <hr>
-
     <h2>3. Economy & Currencies</h2>
     <ul>
-        [cite_start]<li><strong>Cycle-Time (CT):</strong> The universal currency[cite: 56]. [cite_start]Everything from ship repairs to buying new abilities (Instruction Sets) costs CT[cite: 57, 61].</li>
-        [cite_start]<li><strong>Sub-Routines:</strong> Your NPC crew[cite: 34]. [cite_start]These are AI fragments you find, hire, or create to pilot your ships or manage systems[cite: 35, 47].</li>
-        [cite_start]<li><strong>The Supply Chain:</strong> Resources like <strong>Stellar Plasma</strong> and <strong>Exotic Matter</strong> must be physically hauled through "Shells" to be refined into ship parts[cite: 42, 43].</li>
+        <li><strong>Cycle-Time (CT):</strong> Earned through missions, selling resources, or even renting out your own processing power to others.</li>
+        <li><strong>Sub-Routines:</strong> These are AI crew members. They have personalities and skills. You must keep them loyal and "patch" their code to keep them effective.</li>
+        <li><strong>Voxel Construction:</strong> Ships are built block-by-block. Every block (thrusters, shields, processors) has a function and a CT cost to build.</li>
     </ul>
 
-    <hr>
-
-    <h2>4. Convoy Logistics (The "RTS" Loop)</h2>
-    [cite_start]<p>Because resources must travel physically between the layers of the Matrioshka Brain, the economy relies on <strong>Convoys</strong>[cite: 45, 46].</p>
+    <h2>4. Convoy Logistics (The Strategy Loop)</h2>
+    <p>Resources aren't teleported; they must be physically moved between the Shells (layers) of the star-machine.</p>
     <ul>
-        [cite_start]<li><strong>Hauling:</strong> You accept contracts to move goods across high-risk "Hyper-Beam" highways or slow "Dead Zones"[cite: 46, 51, 52].</li>
-        [cite_start]<li><strong>Protection:</strong> You must assign Sub-Routines (Pilots, Gunners) or player escorts to defend these slow-moving freighters from being boarded by Ghost armies[cite: 14, 47].</li>
-        [cite_start]<li><strong>Strategy:</strong> Profit is calculated by balancing the risk of piracy against the cost of fuel and speed[cite: 54].</li>
+        <li><strong>The Trade:</strong> You haul raw materials from the inner layers to the outer layers to make a profit.</li>
+        <li><strong>The Risk:</strong> Moving a convoy makes you a target. You must balance the cost of hiring escorts (players or Sub-Routines) against the potential profit of the trip.</li>
+        <li><strong>The Reward:</strong> Large-scale logistics allow you to fund massive fleet operations and high-end digital upgrades.</li>
     </ul>
-
-    <hr>
 
     <h2>5. Basic Terminology</h2>
     <ul>
-        [cite_start]<li><strong>Architecture:</strong> Your character's build (e.g., <em>Monolith</em> for precision, <em>Archive</em> for tanking)[cite: 28, 30].</li>
-        <li><strong>Tether:</strong> The glowing line connecting your Ghost form to your physical body. [cite_start]If it’s cut, you are trapped[cite: 90].</li>
-        [cite_start]<li><strong>ICE:</strong> Automated digital defense programs that hunt hackers inside a ship's Ghost Layer[cite: 95].</li>
-        [cite_start]<li><strong>Logic Bomb:</strong> A digital virus planted by a hacker that eventually explodes, damaging the physical ship from the inside[cite: 93].</li>
+        <li><strong>Architecture:</strong> Your "Class" (e.g., <em>Monolith</em> for speed/precision, <em>Archive</em> for storage/tanking).</li>
+        <li><strong>Tether:</strong> The digital line connecting your Ghost form to your body. If an enemy hacker cuts this, you are trapped or "killed."</li>
+        <li><strong>ICE:</strong> "Intrusion Countermeasure Electronics"—automated AI guards that hunt hackers in the Ghost Layer.</li>
+        <li><strong>Breach:</strong> A hole in the ship's physical hull that allows Ghosts to enter.</li>
     </ul>
 
-    <p><em>Would you like me to expand on the specific "Ghost Roles" like the Wraith or the Surgeon to see how they interact with these convoys?</em></p>
+    <div class="footer-callout">
+        Would you like to dive deeper into how to build your first ship, or should we look at the specific "Ghost" roles you can play during a fleet battle?
+    </div>
+</div>
 
 </body>
 </html>
