--- a/overview.html
+++ b/overview.html
@@ -23,7 +23,7 @@
 
 <div class="container">
     <h1>Omni-Shell: The Last Epoch</h1>
-    <p>Welcome to the <strong>Matrioshka Brain</strong>—a massive, failing Dyson sphere surrounding a star. You are a post-human consciousness living within this machine. Reality is a computational substrate where ships are mobile processors, and combat is both physical and informational.</p>
+    <p>Welcome to the <strong>Matrioshka Brain</strong>;a massive, failing Dyson sphere surrounding a star. You are a post-human consciousness living within this machine. Reality is a computational substrate where ships are mobile processors, and combat is both physical and informational.</p>
 
     <h2>1. The Core Objective: Processing is Power</h2>
     <p>In Omni-Shell, the ultimate goal isn't just to "destroy a base," but to secure the resources required for your digital existence.</p>
